--- a/blog-info.html
+++ b/blog-info.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - المدوّنة</title>
@@ -186,8 +187,9 @@
                 </div>
             </div>
             <div class="row second-row gy-4">
-                <img src="imgs/video-photo.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img">
-                <p class="col-12 mb-0">
+                <img src="imgs/video-photo.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img"
+                    data-aos="fade-down" data-aos-duration="1000">
+                <p class="col-12 mb-0" data-aos="fade-down" data-aos-duration="1000">
                     كيفية عمل دراسة الجدوى الاقتصادية تعد من أهم الخطوات التي يجب إتخاذها، وذلك عند القيام بأي مشروع.
                     <br />
                     لأنها هى التي تقدم لصاحب المشروع كافة المعلومات التي يحتاج لها، لكي تجيب عن تساؤلات كثيرة من شأنها
@@ -203,7 +205,7 @@
                     هي كالتالي. <br>
                     أولاً الدراسة الخاصة بالسوق
                 </p>
-                <ul>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>تتم الدراسة الخاصة بالسوق من خلال عدة نقاط أساسية، وهي كالأتي.</li>
                     <li>حيث يتم هذا من خلال عمل دراسة كاملة عن العملاء المستهدفين.</li>
                     <li>كذلك مدى استيعاب السوق للكميات المطلوبة سواء للخدمة أو المنتج.</li>
@@ -216,10 +218,12 @@
                     <li>كذلك التعرف على كيفية التسويق له وما هى الأسعار التي تم وضعها من <br
                             class="d-none-d-lg-block">المنافسين ؟</li>
                 </ul>
-                <p>قد يهمك : كيفية حساب الربح والخسارة لمشروع صغير</p>
-                <img src="imgs/info-blog-img.png" class="img-fluid col-12 info-blog-img-2" alt="img">
-                <p class="mt-5 mb-3">ثانياً – دراسة النواحي الفنية للمشروع</p>
-                <ul>
+                <p data-aos="fade-down" data-aos-duration="1000">قد يهمك : كيفية حساب الربح والخسارة لمشروع صغير</p>
+                <img src="imgs/info-blog-img.png" class="img-fluid col-12 info-blog-img-2" alt="img"
+                    data-aos="fade-down" data-aos-duration="1000">
+                <p class="mt-5 mb-3" data-aos="fade-down" data-aos-duration="1000">ثانياً – دراسة النواحي الفنية للمشروع
+                </p>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>وتتم باتباع خطوات معينة وهي كما يأتي.</li>
                     <li>لابد من التحديد الدقيق لأصول المشروع الثابتة.</li>
                     <li>وكذلك معرفة ما يناسبه من موقع حتى يتم إنشائه، وما سوف يلزم له من معدات أو مواد لبنائه.</li>
@@ -230,20 +234,20 @@
                         بالإنتاج.</li>
                     <li>وهل هناك كم معين لا بد من إنتاجه ؟ وما هى هذه الكمية ؟</li>
                 </ul>
-                <p class="mb-0">
+                <p class="mb-0" data-aos="fade-down" data-aos-duration="1000">
                     ثالثاً – دراسة مالية خاصة بالمشروع <br>
                     هذه الدراسة المالية تتم من خلال عدد من النقاط الأساسية وهى. <br>
                     النقطة الأولى <br>
                     هي التي يتم فيها دراسة كل التكاليف التي سوف يحتاج إليها المشروع، و نجدها تنقسم إلى ما يلي. <br>
                     تكاليف التأسيس <br>
                 </p>
-                <ul>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>وهى مجموعة التكاليف التي سوف يحتاج إليها المشروع في بداياته.</li>
                     <li>وخاصة فيما يرتبط بالرسوم المدفوعة فى استخراج الأوراق الرسمية والتراخيص.</li>
                     <li>وكذلك الإستشارات وهي مصروفات لن يتم إسترجاعها بعد ذلك.</li>
                 </ul>
-                <p class="my-5">تكاليف خاصة برأس المال</p>
-                <p class="m-0">
+                <p data-aos="fade-down" data-aos-duration="1000" class="my-5">تكاليف خاصة برأس المال</p>
+                <p data-aos="fade-down" data-aos-duration="1000" class="m-0">
                     وتشمل المكان الذي سوف يقام عليها المشروع والمعدات التي سوف تقوم بالإنتاج. <br>
                     كما إنها هي مصروفات يمكن استرجاعها إذا تم بيعها مرة أخرى. <br>
                     تكاليف تشغيلية <br>
@@ -251,32 +255,33 @@
                     كما يتم حساباتها خلال عام واحد من دورة المشروعات الإنتاجية. <br>
                     تكاليف ثابتة <br>
                 </p>
-                <ul>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>وهي المتعلقة بما سوف يتم إنفاقه لقيام المشروع.</li>
                     <li>كما إنها هى لا تتغير حتى وإن كان المشروع قد زاد في الإنتاج.</li>
                     <li>ومثال على ذلك إيجار المكان وكذلك الصيانة الدورية، بالإضافة إلى رواتب العمال.</li>
                 </ul>
-                <p class="my-5">تكاليف متغيرة</p>
-                <ul>
+                <p data-aos="fade-down" data-aos-duration="1000" class="my-5">تكاليف متغيرة</p>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>وهى مرتبطة بالنسبة التي يقوم بها المشروع بالإنتاج.</li>
                     <li>تلك التي تعد متغيرة حسب الحجم الذي يتم إنتاجه من السلعة.</li>
                     <li>كذلك تشمل المواد الخام المستخدمة في الإنتاج وأجور العمال والفواتير، والتي يتم دفعها الخاصة
                         بالمرافق العامة.</li>
                 </ul>
-                <p class="mb-0">اقرأ أيضًا : كيفية عمل دراسة جدوي ناجحة لمشروع في 5 خطوات فقط</p>
-                <p class="my-5">النقطة الثانية</p>
-                <ul>
+                <p data-aos="fade-down" data-aos-duration="1000" class="mb-0">اقرأ أيضًا : كيفية عمل دراسة جدوي ناجحة
+                    لمشروع في 5 خطوات فقط</p>
+                <p data-aos="fade-down" data-aos-duration="1000" class="my-5">النقطة الثانية</p>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>يتم في هذه المرحلة عمل عدة حسابات، مثل الإيراد الشهري والكمية التي تم بيعها.</li>
                     <li>وكذلك التكلفة الشهرية للتشغيل، وأيضاً الربح الذي تم تحقيقه في شهر كامل.</li>
                     <li>وآخر ما سوف نقوم بتقديمه في هذا المقال الشامل.</li>
                     <li>وهو أن نؤكد على أن كل ما قمنا بتقديمه ليس بالضرورة يمكن أن يتم تطبيقه لكل مشروع.</li>
                     <li>كما إن هناك مشاريع لا تتطلب كل هذه الخطوات وفقكم الله جميعاً.</li>
                 </ul>
-                <p class="mb-0">
+                <p class="mb-0" data-aos="fade-down" data-aos-duration="1000">
                     معلومات عن دراسة الجدوى <br>
                     أنواع دراسات الجدوى الاقتصادية
                 </p>
-                <ul>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>حظي موضوع دراسات الجدوى الاقتصادية بالاهتمام لدورها الكبير في تحقيق الاستخدام والتوزيع الأمثل
                         للموارد الاقتصادية
                         المتاحة.</li>
@@ -285,8 +290,8 @@
                         وأماناً في تحقيق
                         الأهداف.</li>
                 </ul>
-                <p class="m-0">أولاً: دراسات الجدوى الأوليـّة.</p>
-                <ul>
+                <p class="m-0" data-aos="fade-down" data-aos-duration="1000">أولاً: دراسات الجدوى الأوليـّة.</p>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>دراسات الجدوى الأوليّة وهي عبارة عن دراسة أو تقرير أوّلي يمثّل الخطوط العامة عن كافة جوانب
                         المشروع أو المشروعات
                         المقترحة.</li>
@@ -294,8 +299,8 @@
                         تفصيلاً.</li>
                     <li>كما إن نتيجة لهذه الدراسة يتم التخلي عن المشروع أو الانتقال إلى الدراسة التفصيلية.</li>
                 </ul>
-                <p class="m-0">ثانياً: دراسات الجدوى التفصيليّة.</p>
-                <ul>
+                <p class="m-0" data-aos="fade-down" data-aos-duration="1000">ثانياً: دراسات الجدوى التفصيليّة.</p>
+                <ul data-aos="fade-down" data-aos-duration="1000">
                     <li>دراسات الجدوى التفصيليّة: عبارة عن دراسات لاحقة لدراسات الجدوى الأولية، ولكنها أكثر تفصيلاً ودقة
                         وشمولية منها.</li>
                     <li>وهي بمثابة تقرير مفصّل يشمل كافة جوانب المشروع المقترح، والتي على أساسها تستطيع الادارة العليا
@@ -310,10 +315,10 @@
                 </ul>
             </div>
             <div class="row-three">
-                <h2>اقرأ المزيد</h2>
+                <h2 data-aos="fade-down" data-aos-duration="1000">اقرأ المزيد</h2>
                 <div class="row gy-5">
                     <div class="col-lg-6 col-12">
-                        <div class="row-three-block-read-more">
+                        <div class="row-three-block-read-more" data-aos="fade-left" data-aos-duration="1000">
                             <div class="one-div">
                                 <img src="imgs/read-more-in-blog-1.png" class="img-fluid" alt="img">
                                 <div class="group-buttons">
@@ -330,7 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-12">
+                    <div class="col-lg-6 col-12" data-aos="fade-right" data-aos-duration="1000">
                         <div class="row-three-block-read-more">
                             <div class="one-div">
                                 <img src="imgs/read-more-in-blog-2.png" class="img-fluid" alt="img">
@@ -453,6 +458,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
