--- a/info-gallery.html
+++ b/info-gallery.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
-        rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
@@ -70,9 +68,6 @@
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4 align-items-center">
-                            <a class="navbar-brand d-none d-lg-block" href="index.html">
-                                <img src="./imgs/logo.png" alt="logo">
-                            </a>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html">الصفحة
                                     الرئسية</a>
@@ -192,8 +187,10 @@
                 </div>
             </div>
             <div class="row second-row gy-4">
-                <img src="imgs/info-gallery-img.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img">
-                <p class="col-12">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                <img data-aos="fade-down" data-aos-duration="1000" src="imgs/info-gallery-img.webp"
+                    class="col-12 img-fluid info-gallery-img" alt="info-gallery-img">
+                <p data-aos="fade-down" data-aos-duration="1000" class="col-12">هذا النص هو مثال لنص يمكن أن يستبدل في
+                    نفس المساحة، لقد تم توليد هذا النص من مولد النص
                     العربى، حيث
                     يمكنك أن تولد مثل هذا
                     النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد
@@ -208,12 +205,17 @@
                     أي تصميم دون مشكلة
                     فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.
                 </p>
-                <img src="imgs/second-row-img-1.webp" class="img-fluid col-6 mt-5" alt="img">
-                <img src="imgs/second-row-img-2.webp" class="img-fluid col-6 mt-5" alt="img">
-                <img src="imgs/second-row-img-3.webp" class="img-fluid col-12" alt="img">
-                <img src="imgs/second-row-img-5.webp" class="img-fluid col-6 mb-5" alt="img">
-                <img src="imgs/second-row-img-4.webp" class="img-fluid col-6 mb-5" alt="img">
-                <p class="last-p">
+                <img data-aos="fade-left" data-aos-duration="1000" src="imgs/second-row-img-1.webp"
+                    class="img-fluid col-6 mt-5" alt="img">
+                <img data-aos="fade-right" data-aos-duration="1000" src="imgs/second-row-img-2.webp"
+                    class="img-fluid col-6 mt-5" alt="img">
+                <img data-aos="fade-down" data-aos-duration="1000" src="imgs/second-row-img-3.webp"
+                    class="img-fluid col-12" alt="img">
+                <img data-aos="fade-left" data-aos-duration="1000" src="imgs/second-row-img-5.webp"
+                    class="img-fluid col-6 mb-5" alt="img">
+                <img data-aos="fade-right" data-aos-duration="1000" src="imgs/second-row-img-4.webp"
+                    class="img-fluid col-6 mb-5" alt="img">
+                <p class="last-p" data-aos="fade-down" data-aos-duration="1000">
                     هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
                     يمكنك أن تولد مثل هذا
                     النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد
@@ -230,9 +232,9 @@
                 </p>
             </div>
             <div class="row-three">
-                <h2>مشاريع أخرى</h2>
+                <h2 data-aos="fade-down" data-aos-duration="1000">مشاريع أخرى</h2>
                 <div class="main-row-three-block">
-                    <div class="row-three-block">
+                    <div class="row-three-block" data-aos="fade-left" data-aos-duration="1000">
                         <img src="imgs/gallery-info-1.png" class="img-fluid" alt="img">
                         <div>
                             <h5>شركة الغامدي للمقاولات</h5>
@@ -241,7 +243,7 @@
                         </div>
                         <a href="#">اقرأ المزيد</a>
                     </div>
-                    <div class="row-three-block">
+                    <div class="row-three-block" data-aos="fade-right" data-aos-duration="1000">
                         <img src="imgs/gallery-info-2.webp" class="img-fluid" alt="img">
                         <div>
                             <h5>شركة الغامدي للمقاولات</h5>
@@ -356,6 +358,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
