--- a/blog-info.html
+++ b/blog-info.html
@@ -23,33 +23,56 @@
                             <div class="ms-4">
                                 <a href="mailto:plan@slsalah.com">
                                     <span>plan@slsalah.com</span>
-                                    <img src="imgs/icons/dark-mail.svg" alt="mail-icon" class="img-fluid">
+                                    <img src="imgs/icons/dark-mail.svg" alt="mail-icon" class="img-fluid dark-icon-1">
+                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+
                                 </a>
                             </div>
                             <div>
                                 <a href="tel:+966555881764">
                                     <span dir="ltr">+966 555 88 1764</span>
-                                    <img src="imgs/icons/dark-phone.svg" alt="phone-icon" class="img-fluid">
+                                    <img src="imgs/icons/dark-phone.svg" alt="phone-icon" class="img-fluid dark-icon-1">
+                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
                                 </a>
                             </div>
                         </div>
                         <div
                             class="col-md-6 text-start social-media-icons d-none d-md-flex align-items-center justify-content-end">
-                            <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                            <a class="dark-icon-1"
+                                href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
                                 target="_blank">
                                 <i class="fa fa-whatsapp" style="color: #000;"></i>
                             </a>
-                            <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                            <a class="dark-icon-1" href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
                                 <img src="imgs/icons/dark-Linked-In.svg" alt="">
                             </a>
-                            <a href="https://twitter.com/slsalah_sa" target="_blank">
+                            <a class="dark-icon-1" href="https://twitter.com/slsalah_sa" target="_blank">
                                 <img src="imgs/icons/dark-icons8-twitterx 1.svg" alt="">
                             </a>
-                            <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                            <a class="dark-icon-1" href="https://www.facebook.com/Slsalah.sa" target="_blank">
                                 <img src="imgs/icons/dark-Facebook.svg" alt="">
                             </a>
-                            <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                            <a class="dark-icon-1" href="https://www.instagram.com/slsalah_sa" target="_blank">
                                 <img src="imgs/icons/dark-Instagram.svg" alt="">
+                            </a>
+
+                            <a class="if-not-active-2"
+                                href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                                target="_blank">
+                                <i class="fa fa-whatsapp" style="color: #fff;"></i>
+                            </a>
+                            <a class="if-not-active-2" href="https://www.linkedin.com/company/slsalah-sa/"
+                                target="_blank">
+                                <img src="imgs/icons/Linked-In.svg" alt="">
+                            </a>
+                            <a class="if-not-active-2" href="https://twitter.com/slsalah_sa" target="_blank">
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
+                            </a>
+                            <a class="if-not-active-2" href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                                <img src="imgs/icons/Facebook.svg" alt="">
+                            </a>
+                            <a class="if-not-active-2" href="https://www.instagram.com/slsalah_sa" target="_blank">
+                                <img src="imgs/icons/Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -60,23 +83,26 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span style="color: #1B4071 !important;" class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                    <a class="navbar-brand if-not-active-6  d-lg-none" href="index.html">
+                        <img src="./imgs/logo.png" alt="logo">
+                    </a>
+                    <a class="navbar-brand if-not-active-5 d-lg-none" href="index.html">
                         <img src="./imgs/icons/dark-logo.png" alt="logo">
                     </a>
-                    <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
+                    <a class="nav-link d-none  d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4 align-items-center">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">الصفحة
+                                <a class="nav-link nav-link-3" aria-current="page" href="index.html">الصفحة
                                     الرئسية</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="who-we-ara.html">من نحن</a>
+                                <a class="nav-link nav-link-3" href="who-we-ara.html">من نحن</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link-2" href="#" role="button" data-bs-toggle="dropdown"
+                                <a class="nav-link-2 nav-link-3" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     الخدمات
                                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
@@ -142,27 +168,41 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">معرض الأعمال</a>
+                                <a class="nav-link nav-link-3" href="gallery.html">معرض الأعمال</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="blog.html">المدونة</a>
+                                <a class="nav-link nav-link-3 active" href="blog.html">المدونة</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html">اتصل بنا</a>
+                                <a class="nav-link nav-link-3" href="contact-us.html">اتصل بنا</a>
                             </li>
                             <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
                                 <button class="ask-request">اطلب استشارّة</button>
                             </a>
-                            <div class="text-center social-media-icons d-block d-md-none">
-                                <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
-                                <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
-                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
-                                <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
-                                <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                            <div class="text-center social-media-icons d-flex d-md-none">
+                                <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                                    target="_blank">
+                                    <i class="fa fa-whatsapp" style="color: #fff;"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                                    <img src="imgs/icons/Linked-In.svg" alt="">
+                                </a>
+                                <a href="https://twitter.com/slsalah_sa" target="_blank">
+                                    <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
+                                </a>
+                                <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                                    <img src="imgs/icons/Facebook.svg" alt="">
+                                </a>
+                                <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                                    <img src="imgs/icons/Instagram.svg" alt="">
+                                </a>
                             </div>
                         </ul>
                     </div>
-                    <a class="navbar-brand d-none d-lg-block" href="index.html">
+                    <a class="navbar-brand if-not-active-6 aaaa" href="index.html">
+                        <img src="./imgs/logo.png" alt="logo">
+                    </a>
+                    <a class="navbar-brand if-not-active-5 aaaa" href="index.html">
                         <img src="./imgs/icons/dark-logo.png" alt="logo">
                     </a>
                 </nav>
