--- a/contact-us.html
+++ b/contact-us.html
@@ -242,7 +242,7 @@
                             </div>
                         </form>
                         <div class="d-flex gap-5 flex-wrap">
-                            <div data-aos="fade-down" data-aos-duration="1000">
+                            <div data-aos="fade-up" data-aos-duration="1000">
                                 <a href="mailto:contact@slsalah.com" class="d-flex align-items-center">
                                     <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
                                     <div class="d-flex flex-column">
@@ -251,7 +251,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div data-aos="fade-down" data-aos-duration="1000">
+                            <div data-aos="fade-up" data-aos-duration="1000">
                                 <a href="tel:+966555881764" class="d-flex align-items-center">
                                     <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
                                     <div class="d-flex flex-column">
@@ -260,10 +260,19 @@
                                     </div>
                                 </a>
                             </div>
+                            <div data-aos="fade-up" data-aos-duration="1000">
+                                <a href="tel:+966112074129" class="d-flex align-items-center">
+                                    <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
+                                    <div class="d-flex flex-column">
+                                        <span class="main-title">المكتب</span>
+                                        <span class="child-title" dir="ltr">+966 112 07 4129</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                     <iframe data-aos="fade-right" data-aos-duration="1000"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3625.0086842309224!2d46.6332502!3d24.6922282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f1d00bf0a7f2f%3A0x8f3fa3832e3ec787!2z2YTZitiz2YYg2YHYp9mE2Yo!5e0!3m2!1sar!2ssa!4v1696821324682!5m2!1sar!2ssa"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
